Added bootsrapper controller, added validators, refactoring

--- a/UntStudio.Server/appsettings.json
+++ b/UntStudio.Server/appsettings.json
@@ -11,5 +11,8 @@
   "AllowedHosts": "*",
   "PluginsDirectory": {
     "Path": "Plugins"
+  },
+  "PluginsLoader": {
+    "Path": "Plugins/UntStudioLoader.dll"
   }
 }
