Fixed bugs, almost stable and done, refactoring

--- a/UntStudio.Server/appsettings.json
+++ b/UntStudio.Server/appsettings.json
@@ -13,6 +13,11 @@
     "Path": "Plugins"
   },
   "PluginsLoader": {
-    "Path": "Plugins/UntStudioLoader.dll"
+    "Path": "Plugins/UntStudio.Loader.dll"
+  },
+  "LoaderEntryPoint": {
+    "Namespace": "UntStudio.Loader",
+    "Class": "Loader",
+    "Method": "Create"
   }
 }
