Fixed bugs, refactoring, removed debug, stable

--- a/UntStudio.Server/appsettings.json
+++ b/UntStudio.Server/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=(localdb)\\MSSQLLocalDB;database=Plugins;"
+    "PluginSubscriptionsDatabaseConnectionString": "server=(localdb)\\MSSQLLocalDB;database=PluginSubscriptions;",
+    "AdminsDatabaseConnectionString": "server=(localdb)\\MSSQLLocalDB;database=Admins;"
   },
   "Logging": {
     "LogLevel": {
