Removed unused things, added Home controller and logging in file

--- a/UntStudio.Server/appsettings.json
+++ b/UntStudio.Server/appsettings.json
@@ -1,24 +1,31 @@
 {
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "PluginSubscriptionsDatabaseConnectionString": "server=(localdb)\\MSSQLLocalDB;database=PluginSubscriptions;",
     "AdminsDatabaseConnectionString": "server=(localdb)\\MSSQLLocalDB;database=Admins;"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "PluginsDirectory": {
-    "Path": "Plugins"
-  },
-  "PluginsLoader": {
-    "Path": "Plugins/UntStudio.Loader.dll"
   },
   "LoaderEntryPoint": {
     "Namespace": "UntStudio.Loader",
     "Class": "Loader",
     "Method": "Create"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    },
+    "File": {
+      "Path": "app.log",
+      "Append": true,
+      "MinLevel": "Warning",
+      "FileSizeLimitBytes": 0,
+      "MaxRollingFiles": 0
+    }
+  },
+  "PluginsDirectory": {
+    "Path": "Plugins"
+  },
+  "PluginsLoader": {
+    "Path": "Plugins/UntStudio.Loader.dll"
   }
 }
