Added Admin authorization, refactoring

--- a/UntStudio.Server/appsettings.json
+++ b/UntStudio.Server/appsettings.json
@@ -3,6 +3,8 @@
   "ConnectionStrings": {
     "PluginSubscriptionsDatabaseConnectionString": "server=(localdb)\\MSSQLLocalDB;database=PluginSubscriptions;",
     "AdminsDatabaseConnectionString": "server=(localdb)\\MSSQLLocalDB;database=Admins;"
+    //"PluginSubscriptionsDatabaseConnectionString": "server=mysql8002.site4now.net;user=db_a89c14_data;database=PluginSubscriptions;password=Popa123123",
+    //"AdminsDatabaseConnectionString": "server=mysql8002.site4now.net;user=db_a89c14_data;database=Admins;password=Popa123123"
   },
   "LoaderEntryPoint": {
     "Namespace": "UntStudio.Loader",
