Stable, load plugins proper

--- a/UntStudio.Server/appsettings.json
+++ b/UntStudio.Server/appsettings.json
@@ -1,10 +1,16 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PluginSubscriptionsDatabaseConnectionString": "server=(localdb)\\MSSQLLocalDB;database=PluginSubscriptions;",
-    "AdminsDatabaseConnectionString": "server=(localdb)\\MSSQLLocalDB;database=Admins;"
-    //"PluginSubscriptionsDatabaseConnectionString": "server=mysql8002.site4now.net;user=db_a89c14_data;database=PluginSubscriptions;password=Popa123123",
-    //"AdminsDatabaseConnectionString": "server=mysql8002.site4now.net;user=db_a89c14_data;database=Admins;password=Popa123123"
+    //"PluginSubscriptionsDatabaseConnectionString": "server=(localdb)\\MSSQLLocalDB;database=Subscriptions;",
+    //"AdminsDatabaseConnectionString": "server=(localdb)\\MSSQLLocalDB;database=Admins;"
+    "PluginSubscriptionsDatabaseConnectionString": "Server=135.181.47.150;User Id=sa;Password=PE0AfQ01;Database=Subscriptions;TrustServerCertificate=True",
+    "AdminsDatabaseConnectionString": "Server=135.181.47.150;User Id=sa;Password=PE0AfQ01;Database=Admins;TrustServerCertificate=True"
+    //"PluginSubscriptionsDatabaseConnectionString": "Server=135.181.47.150;User Id=serveradmin;Password=0_ServerAdminP_2;Database=Subscriptions",
+    //"AdminsDatabaseConnectionString": "Server=135.181.47.150;User Id=serveradmin;Password=0_ServerAdminP_2;Database=Admins"
+    //"PluginSubscriptionsDatabaseConnectionString": "Data Source=tcp:adminsdatabase.database.windows.net,1433;Initial Catalog=PluginSubscriptionsDatabaseContext;User Id=serveradmin@adminsdatabase;Password=Papamama41bro",
+    //"AdminsDatabaseConnectionString": "Data Source=tcp:adminsdatabase.database.windows.net,1433;Initial Catalog=AdminsDatabaseContext;User Id=serveradmin@adminsdatabase;Password=Papamama41bro"
+    // serveradmin 0_ServerAdminP_2
+    // Subscriptions
   },
   "LoaderEntryPoint": {
     "Namespace": "UntStudio.Loader",
