--- a/UntStudio.Loader.OpenMod.Integration/UntStudio.Loader.OpenMod.Integration.csproj
+++ b/UntStudio.Loader.OpenMod.Integration/UntStudio.Loader.OpenMod.Integration.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\UntStudio.External.API\UntStudio.External.API.csproj" />
     <ProjectReference Include="..\UntStudio.Loader.API\UntStudio.Loader.API.csproj" />
   </ItemGroup>
 
