--- a/UntStudio.Loader.API/UntStudio.Loader.API.csproj
+++ b/UntStudio.Loader.API/UntStudio.Loader.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
 	<TargetFramework>net472</TargetFramework>
@@ -6,5 +6,9 @@
 	<ImplicitUsings>disable</ImplicitUsings>
 	<Nullable>disable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.24" />
+  </ItemGroup>
 
 </Project>
