--- a/UntStudio.Loader/UntStudio.Loader.csproj
+++ b/UntStudio.Loader/UntStudio.Loader.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
@@ -17,12 +17,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0-preview.7.22375.6" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.24" />
     <PackageReference Include="Microsoft.Net.Http.Headers" Version="2.2.8" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2-beta1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\UntStudio.External.API\UntStudio.External.API.csproj" />
     <ProjectReference Include="..\UntStudio.Loader.API\UntStudio.Loader.API.csproj" />
   </ItemGroup>
 
