--- a/UntStudio.Bootstrapper.API/UntStudio.Bootstrapper.API.csproj
+++ b/UntStudio.Bootstrapper.API/UntStudio.Bootstrapper.API.csproj
@@ -6,4 +6,12 @@
 	<Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
+
 </Project>
