--- a/UntStudio.Loader.API/UntStudio.Loader.API.csproj
+++ b/UntStudio.Loader.API/UntStudio.Loader.API.csproj
@@ -7,6 +7,14 @@
 	<Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.24" />
   </ItemGroup>
